upgrade nginx data limit

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,7 @@ server {
     listen 80;
 
     location / {
+        client_max_body_size 50M;
         include uwsgi_params;
         uwsgi_pass flask:8080;
     }
