--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 version: "3.7"
 
 services:
-
   # Define our individual services
 
   flask:
-
     # Build the flask service using the Dockerfile in the flask directory
     build: ./flask
 
@@ -18,6 +16,9 @@ services:
     # Use environment to set any environment variables
     environment:
       - APP_NAME=MyFlaskApp
+      - COUCHDB_HOST=172.26.134.145
+      - COUCHDB_USER=admin
+      - COUCHDB_PASSWORD=MGZjZGU5N
 
     # Any ports listed using `expose` will only be accessible to internal services/containers
     # uWSGI will be serving our Flask application on port 8080
@@ -31,7 +32,6 @@ services:
       - ./log/uwsgi:/var/log/uwsgi
 
   nginx:
-
     # Build the nginx service using the Dockerfile in the nginx directory
     build: ./nginx
 
@@ -50,4 +50,3 @@ services:
     # Just make sure the directory exists before running docker-compose up --build
     volumes:
       - ./log/nginx:/var/log/nginx
-
