--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ server {
 
     location / {
         client_max_body_size 50M;
+        worker_processes 8;
         include uwsgi_params;
         uwsgi_pass flask:8080;
     }
